# gstreamer_learn

src/: CMakeLists.txt  CMakePresets.json  main.c
src/audioplayer/: audio_player2.c  audio_player2.h
src/basic/: basic-tutorial-1.c  basic.h
src/elements/: audio_demux2.c  media_demux.c  media_demux.h
src/lib/: libfdk_aac.dylib  libgraphene-1.0.0.dylib  libgstbadaudio-1.0.0.dylib  libgstbasecamerabinsrc-1.0.0.dylib  libgstcheck-1.0.0.dylib  libgstcodecs-1.0.0.dylib  libgstdxva-1.0.0.dylib  libgstdxva-1.0.dylib  libgstfft-1.0.0.dylib  libgstgl-1.0.0.dylib  libgstnet-1.0.0.dylib  libgstplayer-1.0.0.dylib  libgstriff-1.0.0.dylib  libgstrtp-1.0.0.dylib  libgstrtspserver-1.0.0.dylib  libgstsctp-1.0.0.dylib  libgsttranscoder-1.0.0.dylib  libgstwebrtc-1.0.0.dylib  libjson-glib-1.0.0.dylib  libmicrodns.1.dylib  libmicrodns.dylib  libmp3lame.0.dylib  libopenh264.7.dylib  liborc-0.4.0.dylib  liborc-test-0.4.0.dylib  libsrtp2.1.dylib
src/lib/girepository-1.0/: GES-1.0.typelib  Gst-1.0.typelib  GstAudio-1.0.typelib  GstGL-1.0.typelib  GstPbutils-1.0.typelib
src/lib/gstreamer-1.0/: libgstaccurip.dylib  libgstadder.dylib  libgstadpcmdec.dylib  libgstaes.dylib  libgstalpha.dylib  libgstamrnb.dylib  libgstamrwbdec.dylib  libgstanalyticsoverlay.dylib  libgstassrender.dylib  libgstaudiobuffersplit.dylib  libgstaudiofx.dylib  libgstaudiofxbad.dylib  libgstaudiomixer.dylib  libgstaudiomixmatrix.dylib  libgstaudiotestsrc.dylib  libgstaudiovisualizers.dylib  libgstauparse.dylib  libgstautodetect.dylib  libgstbz2.dylib  libgstcamerabin.dylib  libgstcodectimestamper.dylib  libgstcoloreffects.dylib  libgstcolormanagement.dylib  libgstcoretracers.dylib  libgstcurl.dylib  libgstcutter.dylib  libgstdeinterlace.dylib  libgstdsd.dylib  libgstdtls.dylib  libgstdv.dylib  libgstdvbsuboverlay.dylib  libgstdvdsub.dylib  libgstfdkaac.dylib  libgstflac.dylib  libgstflxdec.dylib  libgstfreeverb.dylib  libgstfrei0r.dylib  libgstgdp.dylib  libgstgoom2k1.dylib  libgsthls.dylib  (+53 more)
src/lib/pkgconfig/: gstreamer-allocators-1.0.pc  gstreamer-app-1.0.pc  gstreamer-bad-audio-1.0.pc  gstreamer-base-1.0.pc  gstreamer-check-1.0.pc  gstreamer-codecparsers-1.0.pc  gstreamer-controller-1.0.pc  gstreamer-gl-prototypes-1.0.pc  gstreamer-insertbin-1.0.pc  gstreamer-mpegts-1.0.pc  gstreamer-net-1.0.pc  gstreamer-pbutils-1.0.pc  gstreamer-player-1.0.pc  gstreamer-rtsp-1.0.pc  gstreamer-sctp-1.0.pc  gstreamer-sdp-1.0.pc  gstreamer-tag-1.0.pc  gstreamer-transcoder-1.0.pc  (+7 more)
src/mediaplayer/: media_player.c
src/test1/: my_demux.c
(+186 files in other folders)
